<resources>
    <string name="app_name" translatable="false">OCE</string>
    <string name="login" translatable="false">Login</string>
    <string name="agree_agreement" translatable="false">Agree the JGW User Agreement</string>
    <string name="customer_service" translatable="false">Service</string>
    <string name="register" translatable="false">Register</string>
    <string name="forget_pwd" translatable="false">Forget Password</string>
    <string name="next" translatable="false">Next</string>
    <string name="set_login_pwd" translatable="false">Set Login Password</string>
    <string name="reset_login_pwd" translatable="false">Reset Login Password</string>
    <string name="login_pwd_description" translatable="false">Login password is used each time you log in to JGW Wallet</string>
    <string name="reset_now" translatable="false">Reset Now</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="verify_verification_code" translatable="false">Verify Verification Code</string>
    <string name="jaw_service" translatable="false">Customer Service Tel</string>
    <string name="jaw_service_tel" translatable="false">400 088 8888</string>
    <string name="string_of_cancel" translatable="false">Cancel</string>
    <string name="string_of_remove" translatable="false">Remove</string>
    <string name="call_service" translatable="false">Call Service</string>
    <string name="pick_photo_from_album" translatable="false">Pick Photo from Album</string>
    <string name="take_photo" translatable="false">Take Photo</string>
    <string name="app_name_zh" translatable="false">JGW Wallet</string>
    <string name="feature" translatable="false">Hardware encryption, perfect for mining</string>
    <string name="create_wallet" translatable="false">Create Wallet</string>
    <string name="load_wallet" translatable="false">Load Wallet</string>
    <string name="wallet_create_success" translatable="false">Wallet Create Successfully</string>
    <string name="restore_now" translatable="false">Back Up Now</string>
    <string name="load" translatable="false">Load</string>
    <string name="input_key_word_description" translatable="false">Please input 12 Keywords and use the space bar to seperate each word</string>
    <string name="copy_key_word_description" translatable="false">Keywords can help you restore wallet, please copy your keywords and store in a safe place!</string>
    <string name="forbid_screen_description" translatable="false">Screenshots may be accessed by others, please copy your keywords and store in a safe place!</string>
    <string name="remove_key_word_description" translatable="false">Keywords Successfully Verified, please remove the keywords from your wallet for safety reason!</string>
    <string name="copy_key_word" translatable="false">Please copy your keywords</string>
    <string name="input_key_word" translatable="false">Input keywords</string>
    <string name="check_key_word" translatable="false">Check keywords</string>
    <string name="remove_key_word" translatable="false">Remove keywords</string>
    <string name="forbid_screen_shot" translatable="false">Screeshots Forbidden</string>
    <string name="understand" translatable="false">Understand</string>
    <string name="check_key_word_description" translatable="false">Please click the keywords in sequence</string>
    <string name="finger_print_verify" translatable="false">Fingerprint Verification</string>
    <string name="password_verify" translatable="false">Password Verification</string>
    <string name="password_verify_tip" translatable="false">Please Verify Password</string>
    <string name="finger_print_verify_tip" translatable="false">Please Verify Your Fingerprint</string>
    <string name="set_transaction_pin" translatable="false">Set Asset Password</string>
    <string name="finger_print_verify_desc" translatable="false">You haven\'t used the app for a long time, for your account security, the app is locked, please verify your fingerprint or unlock it with your login password.</string>
    <string name="reset_transaction_pin" translatable="false">Reset Asset Password</string>
    <string name="set_transaction_pin_notice" translatable="false">\u3000\u3000 The asset password is used when the asset changes, thus it is an important guarantee for your asset security. The  server does not store the asset password. It is only stored in the phone encryption chip. The password cannot be modified after the setting is completed, it can only be reset by importing the wallet!</string>
    <string name="key_word_notice" translatable="false">\u3000\u3000 Leakage of keywords is equal to leakage of wallet assets, and keywords are the only way to restore your wallet, please make sure to make a copy of your keywords!</string>
    <string name="ensure_transaction_pin" translatable="false">Confirm Asset Password</string>
    <string name="ensure_transaction_pin_notice" translatable="false">Confirm Asset Password Hint</string>
    <string name="recover_wallet_warning" translatable="false">\u3000\u3000 The asset password is saved locally and can only be reset by importing the wallet. Please re-import the wallet to reset your asset password. JGW Wallet only supports one wallet, the original wallet will be replaced after a new wallet is imported</string>
    <string name="wallet" translatable="false">Wallet</string>
    <string name="discovery" translatable="false">Mining</string>
    <string name="mine" translatable="false">Mine</string>
    <string name="total_asset" translatable="false">Total Asset(CNY)</string>
    <string name="asset_protected" translatable="false">Your asset has been protected with chip encryption</string>
    <string name="asset_unprotected" >Your asset has been unprotected with chip encryption</string>
    <string name="security_manager" translatable="false">Security Management</string>
    <string name="share_to_friends" translatable="false">Share to Friends</string>
    <string name="base_task" translatable="false">Basic Task</string>
    <string name="help" translatable="false">Help Center</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="ram_share" translatable="false">Memory Sharing</string>
    <string name="chain_on" translatable="false">Crowdfunding on Chain</string>
    <string name="data_transfer_platform" translatable="false">Data Transaction Platform</string>
    <string name="status_loading" translatable="false">Verification data loading...Please wait！</string>
    <string name="status_say" translatable="false">Please click the button and say the numbers below in English</string>
    <string name="status_recording" translatable="false">Recording, please say the numbers below in English</string>
    <string name="status_uploading" translatable="false">Uploading recording, please wait...</string>
    <string name="voice_input" translatable="false">Voice Input</string>
    <string name="voice_verify" translatable="false">Voice Verification</string>
    <string name="toast_enroll_success" translatable="false">Voice Registration Successful!</string>
    <string name="voice_register_failed" translatable="false">Voice registration Unsuccessful!</string>
    <string name="toast_verify_failed" translatable="false">Voice Verificatiom Unsuccessful!</string>
    <string name="voice_verify_success" translatable="false">Voice Verificatiom Successful!</string>
    <string name="vigo_get_id_failed" translatable="false">Unable to Connect Voice Verification Service!</string>
    <string name="audio_permission_failed" translatable="false">Audio Permission Application Failed!</string>
    <string name="transaction_detail" translatable="false">Transaction Details</string>
    <string name="success" translatable="false">Success</string>
    <string name="fail" translatable="false">Fail</string>
    <string name="send" translatable="false">Send</string>
    <string name="received" translatable="false">Receive</string>
    <string name="ensure_send" translatable="false">Confirm Sending</string>
    <string name="send_amount" translatable="false">Send Amount</string>
    <string name="send_address" translatable="false">Send Address</string>
    <string name="received_address" translatable="false">receiving address</string>
    <string name="transaction_id" translatable="false">Transaction id</string>
    <string name="commission" translatable="false">Mining Commission</string>
    <string name="chain_number" translatable="false">Blockchain Height</string>
    <string name="cny_unit" translatable="false">CNY</string>
    <string name="copy" translatable="false">Copy</string>
    <string name="share_address" translatable="false">Share Address</string>
    <string name="mine_address" translatable="false">My Address</string>
    <string name="balance" translatable="false">Balance</string>
    <string name="agree_service_manager" translatable="false">Please Agree with the JGW User Agreement!</string>
    <string name="hint_of_input_phone" translatable="false">Please enter your phone number</string>
    <string name="hint_of_input_security" translatable="false">Please enter the verification code</string>
    <string name="hint_of_input_pwd" translatable="false">Please enter your login password</string>
    <string name="hint_of_set_pwd" translatable="false">Please enter a 6-16 digit password</string>
    <string name="hint_of_invite_code" translatable="false">Please enter your invitation code (optional)</string>
    <string name="hint_of_send_amount" translatable="false">Please enter amount</string>
    <string name="received_address_hint" translatable="false">Please enter receiving address</string>
    <string name="hint_input_transaction_pin" translatable="false">Please enter asset password</string>
    <string name="sample_balance" translatable="false">0.0</string>
    <string name="sample_notify" translatable="false">Congratulation to user 157****4513, you have mined 0.5 BTC</string>
    <string name="sample_hashrate" translatable="false">Hashrate%1$d</string>
    <string name="sample_asset" translatable="false">Mining Asset (CNY): 0.0</string>
    <string name="mining_income" translatable="false">Mining income</string>
    <string name="add_hashrate" translatable="false">Add hashrate</string>
    <string name="write_auth_info" translatable="false">Please enter your real name information</string>
    <string name="write_name" translatable="false">Enter name</string>
    <string name="write_name_hint" translatable="false">Please enter your real name</string>
    <string name="write_id_number" translatable="false">Please enter your ID card number</string>
    <string name="write_id_number_hint" translatable="false">Please enter your real ID card number</string>
    <string name="jgw_phone_wallet" translatable="false">JGW Phone Wallet</string>
    <string name="jgw_feature" translatable="false">Hardware encryption, perfect for mining</string>
    <string name="jgw_feature_des" translatable="false">\u3000\u3000 Encryption chip protects your asset private key, permanently secure, and perfect for bitcoin mining</string>
    <string name="jgw_service" translatable="false">Enquiry number: 0111-88888888</string>
    <string name="share" translatable="false">Share</string>
    <string name="id_auth_one" translatable="false">1/2 steps</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="invite_code" translatable="false">Invitation code</string>
    <string name="feedback_banner" translatable="false">Your feedback is important</string>
    <string name="feedback_input_hint" translatable="false">Please enter your question or suggestion here</string>
    <string name="contact_way" translatable="false">Contact information</string>
    <string name="contact_hint" translatable="false">Tel/QQ/WeChat/Email</string>
</resources>