<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_of_normal_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/feedback_banner"
        android:textColor="#636467"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/et_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/feedback_input_hint"
        android:scrollbars="vertical"
        android:textSize="12sp"
        android:gravity="left"
        android:padding="8dp"
        android:background="@mipmap/bg_key_words_input"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/contact_way"
        android:textColor="#636467"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/et_feedback_contact"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/contact_hint"
        android:textSize="12sp"
        android:gravity="left"
        android:padding="8dp"
        android:background="@mipmap/bg_key_words_input"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_of_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:textColor="#f3f5f7"
        android:gravity="center"
        android:text="@string/submit"
        android:background="@mipmap/bg_of_next"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="110dp"
        android:layout_weight="0"/>

</LinearLayout>
